# dbinfo

./: Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: temp_my.py  temp_pg.py  temp_sl.py
src/: dbinfo.rs  lib.rs  main.rs  models.rs  my_handler.rs  pg_handler.rs  sl_handler.rs
tests/: model_tests.rs  mysql_tests.rs  postgres_tests.rs  sqlite_tests.rs
