[package]
name = "dbinfo"
version = "0.1.0"
edition = "2024"

[dependencies]
postgres = { version = "0.19.12", features = ["with-serde_json-1"] }
mysql = { version = "25.0", default-features = false, features = ["rustls-tls"] }
flate2 = { version = "1.0", features = ["rust_backend"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
testcontainers = { version = "0.23", features = ["blocking"] }
testcontainers-modules = { version = "0.11", features = ["postgres", "mysql"] }
